# Finding-similar-photos

./: README.md  pyproject.toml
src/: similarity.py
